# wcl-stream

./: .gitignore
installer-mac/: .gitignore  WCL.pkgproj
installer-mac/config/: installer.sh
installer-win/: .gitignore  mp-installer.nsi
wcl/: .gitignore  .mailmap  AUTHORS  CMakeLists.txt  README.md
wcl-virtual-cam/: .gitignore
wcl-virtual-cam/src/virtual-output/: CMakeLists.txt  virtual_filter.cpp
wcl-virtual-cam/src/virtual-source/: dllmain.cpp
wcl-virtualaudio-mac/BlackHole/: BlackHole.h
wcl-virtualaudio-mac/BlackHole.xcodeproj/: project.pbxproj
wcl-virtualaudio-mac/BlackHole.xcodeproj/project.xcworkspace/xcuserdata/star.xcuserdatad/: UserInterfaceState.xcuserstate
wcl-virtualcam-win/: CMakeLists.txt
wcl-virtualcam-win/installer/: installer.nsi
wcl-virtualcam-win/src/virtual-output/: virtual_main.cpp  virtual_properties.cpp  virtual_properties.h  virtualoutput.aps  virtualoutput.rc.in
wcl-virtualcam-win/src/virtual-source/: CMakeLists.txt  virtualsource.aps  virtualsource.rc.in
wcl/CI/: full-build-macos.sh
wcl/CI/scripts/macos/app/: Info.plist  wcl.icns
wcl/CI/scripts/macos/package/: settings.json.template
wcl/UI/: CMakeLists.txt  api-interface.cpp  obs-app.cpp  record-button.cpp  volume-control.cpp  wcl.manifest  wcl.rc.in  window-basic-main-profiles.cpp  window-basic-main-scene-collections.cpp  window-basic-main-transitions.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-source-select.cpp  window-basic-stats.cpp  window-basic-status-bar.cpp  window-basic-status-bar.hpp  window-projector.cpp
wcl/UI/forms/: OBSAbout.ui  OBSBasic.ui  wcl.qrc
wcl/UI/frontend-plugins/decklink-output-ui/: CMakeLists.txt  decklink-ui-main.cpp
wcl/UI/frontend-plugins/frontend-tools/: CMakeLists.txt  auto-scene-switcher.cpp  output-timer.cpp  scripts.cpp
wcl/UI/obs-frontend-api/: CMakeLists.txt  obs-frontend-api.cpp  obs-frontend-api.h  obs-frontend-internal.hpp
wcl/UI/xdg-data/: CMakeLists.txt  com.wclproject.Studio.appdata.xml.in  com.wclproject.Studio.desktop
wcl/cmake/: ALL_BUILD.vcxproj.user.in
wcl/cmake/Modules/: FindPythonDeps.cmake  ObsCpack.cmake  ObsCpack.cmake.bak
wcl/plugins/win-capture/graphics-hook/: obs-vulkan32.json  obs-vulkan64.json
wcl/plugins/win-dshow/virtualcam-module/: virtualcam-filter.cpp
wcl/workflows/: main.yml
